mainMenu po malu do przoda

--- a/Project_Ducker/ProjektPK.vcxproj
+++ b/Project_Ducker/ProjektPK.vcxproj
@@ -135,6 +135,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="General.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="OnHitAnimation.cpp" />
@@ -142,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="General.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="OnHitAnimation.h" />
     <ClInclude Include="Target.h" />
